--- a/style.css
+++ b/style.css
@@ -77,3 +77,15 @@ body {
     font-size: 9px;
     height: 13px;
 }
+.abc{
+    text-align: center;
+    text-decoration-color: #09c372;
+    
+}
+.cdf{
+    color:#045f37;
+}
+.pqr{
+    text-align: center;
+    color:#045f37
+}
